2006-01-03  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/String/getBytes13.java (dumpArray): New
	method.
	(test1Encoding): Use it.

2006-01-03  Lillian Angel  <langel@redhat.com>
	
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getAcceleratorForeground.java:i
	(test): Fixed color.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getAcceleratorSelectedForeground.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getBlack.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControl.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlDarkShadow.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlDisabled.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlHighlight.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlInfo.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlShadow.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlTextColor.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlTextFont.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getDefaults.java: