@@ -1,3 +1,8 @@
+2006-01-04  Gary Benson <gbenson@redhat.com>
+
+	* gnu/testlet/TestSecurityManager2.java (TestSecurityManager2):
+	Preload some classes to avoid infinite loops when in force.
+
 2006-01-03  Tom Tromey  <tromey@redhat.com>
 
 	* gnu/testlet/java/lang/String/getBytes13.java (dumpArray): New
